Changed parts of visuals along with a border to prevent going out of bounds

--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ html, body {
   color: #888888;
   text-align: center;
   display: none;
+  font-family: monospace;
 }
 
 #map {
